--- a/css/style.css
+++ b/css/style.css
@@ -107,6 +107,11 @@ blockquote {
   border-left: 0;
 }
 
+#banner {
+  opacity: 0.7;
+  justify-content:center;
+}
+
 address {
   margin-top: 0;
   margin-bottom: 0;
@@ -3431,6 +3436,7 @@ hr {
 .button-facebook:hover,
 .button-facebook:active {
   color: #ffffff;
+  background-color: #000000;
   background-color: #3e64b0;
   border-color: #3e64b0;
 }
